<resources>
    <string name="app_name">微冷知识</string>
    <string name="app_details">微冷知识 -- 每天一则冷知识，伴你愉快每一天</string>
    <string name="my_name">飘渺云轩</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- NavigateView Item -->
    <string name="nav_everyday">每日一冷</string>
    <string name="nav_image_txt">图文精选</string>
    <string name="nav_video">视频精选</string>
    <string name="nav_collect">我的收藏</string>
    <string name="nav_sponsor">赞助我们</string>
    <string name="nav_app">推荐应用</string>
    <string name="nav_discus">赏个好评</string>

    <!-- Toolbar Search -->
    <string name="action_search">Search</string>

    <!-- Loading Page -->
    <string name="load_again">-重新加载-</string>
    <string name="loading">正在加载中...</string>
    <string name="the_end">---THE END---</string>

    <string name="title_activity_settings">Settings</string>

    <!-- 图文精选 Tabs -->
    <string-array name="tabs_title">
        <item>百科</item>
        <item>动物</item>
        <item>天文</item>
        <item>文化</item>
        <item>人体</item>
        <item>历史</item>
        <item>地理</item>
        <item>自然</item>
        <item>生活</item>
        <item>科学</item>
        <item>体育</item>
        <item>植物</item>
        <item>名人</item>
    </string-array>

    <string name="title_activity_details">详情阅读</string>
    <string name="edit_text">请输入搜索的内容</string>
    <string name="search">搜索</string>
    <string name="sponsor_content">微冷知识，是能让你发现生活中那些鲜有人去注意，常常遇到、听到但又与你知道的不同的冷知识。\r\n\r\n在带给你无穷的趣味的同时，让你不知不觉成为冷知识达人，让你在某个时刻瞬间成为众人的焦点，提升自己的逼格。 now，赶紧行动起来吧~\r\n\r\n本应用致力于让各位每天都有所收获，每天都能学到一点冷知识。如果您喜欢它，不妨小额赞助以下我们，您的支持就是我们的动力，感激不尽！\r\n\r\n当然，「点击或观看广告」也是对我们的一种支持。</string>
    <string name="sponsor_data">数据来源：\r\n冷知识网（http://www.lengzs100.com），感谢冷知识网的大力支持！</string>
    <string name="sponsor_ad_clickable">观看视频广告支持我们</string>
    <string name="sponsor_copy_right">Copyright ©飘渺云轩工作室 2016-12-12 </string>
    <string name="action_settings">Settings</string>

</resources>
