<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_everyday"
            android:icon="@drawable/ic_menu_camera"
            android:checked="true"
            android:title="@string/nav_everyday" />
        <item
            android:id="@+id/nav_image_txt"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_image_txt" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_video" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_collect"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_collect" />
            <item
                android:id="@+id/nav_sponsor"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_sponsor" />
            <item
                android:id="@+id/nav_app"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_app" />
        </menu>
    </item>
    <group android:id="@+id/group_setting">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_setting" />
    </group>

</menu>
