<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/colorWhiteLittle"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardElevation="@dimen/dp_3"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_14"
                android:text="@string/sponsor_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/btn_sponsor_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSplash"
                android:text="@string/sponsor_ad_clickable"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_18"
                android:layout_marginLeft="@dimen/dp_56"
                android:layout_marginRight="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginBottom="@dimen/dp_32"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:src="@drawable/wechat" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_10"
                android:src="@drawable/aliplay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:layout_marginBottom="@dimen/dp_24"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:text="@string/sponsor_data"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_8"
                android:text="@string/sponsor_copy_right"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>